refactor: change names from plural ro singular